Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@font-face {
	font-family: "chirp";
	src: url("./assets/fonts/twitterChirpRegular.woff") format("woff");
}
@font-face {
	font-family: "chirpMedium";
	src: url("./assets/fonts/twitterChirpMedium.woff") format("woff");
	/* font-weight: bold; */
}
@font-face {
	font-family: "chirpBold";
	src: url("./assets/fonts/twitterChirpBold.woff") format("woff");
	/* font-weight: 500; */
}

:root {
	--header-height: 107px;
	--tweet-box-height: 188px;
	--main-border-style: 1px solid rgb(239, 243, 244);
}

::placeholder {
	opacity: 0.72;
	color: rgba(15, 20, 25, 0.8);
	font-family: chirp;
}

section,
div,
p,
img,
ul,
ol,
li {
	margin: 0;
	padding: 0;
}

.alignment-boxes {
	flex: 1 1 46.66%;
	height: 100%;
	margin: 0;
	padding: 0;
	//border: 0.1rem solid green;
}
.nav-icons {
	width: 26.25px;
	height: 26.25px;
}

.lightIcons {
	opacity: 0.5;
}

.hidden500 {
	display: none !important;
	@media only screen and (500px<=width) {
		display: flex !important;
	}
}

.hidden688 {
	display: none !important;
	@media only screen and (688px<=width) {
		display: flex !important;
	}
}

.hidden705 {
	display: none !important;
	@media only screen and (705px<=width) {
		display: flex !important;
	}
}

.hidden-More {
	display: none !important;
}

.wrappers {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex {
	display: flex;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}
.wrappers--flex-column {
	display: flex;
	flex-direction: column;
}

/* .icon-fill {
	fill: black;
} */

.App {
	display: flex;
	flex-direction: column;
	height: 100vh;
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	overflow-y: hidden;
	background-color: white;
	font-family: chirp;
	@media only screen and (500px<=width) {
		flex-direction: row;
		overflow-x: scroll;
	}
}

.left-container {
	//named based on desktop position..will be at bottom on mobile viewports
	z-index: 2;
	position: fixed;
	margin-top: calc(100vh - 53.5px);
	display: flex;
	// /* margin: 0; */ commented out to prevent fixed position being pushed to top
	padding: 0;
	border-top: var(--main-border-style);
	height: 53.5px;
	width: 100%;
	box-sizing: border-box;
	//border: solid red;
	background-color: white;

	@media only screen and (500px<=width) {
		position: relative;
		flex-direction: column;
		flex: 1 0 auto;
		height: 100vh;
		// z-index: 2;
		width: 69px;
		border-top: 0;
		border-right: var(--main-border-style);
		margin: 0;
		padding: 0 4px 0 4px;
		box-sizing: border-box;
	}
	@media only screen and(600px<=width) {
		position: relative;
		box-sizing: border-box;
		padding: 0;
		width: 88px;
		//max-width: 88px;
		flex: 1 0 auto;
		border: none;
	}

	@media only screen and(688px<=width) {
		width: auto;
		flex: 1 1 auto;
		border: none;
		align-items: baseline;
	}

	@media only screen and(988px<=width) {
		width: 68px;
		flex: 1 1 auto;
		border: none;
	}
}

.nav {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	//background-color: #1d8ad3;
	//border: solid red;

	@media only screen and (500px<=width) {
		display: flex;
		flex-direction: column;
		//flex-basis: 0 0 auto;
		align-items: center;
		width: 100%;
		height: 582px;
		//border: 0.1px solid blue;
		margin: 0 0 4px 0;
		padding: 0;
	}
	@media only screen and (600px<=width) {
		box-sizing: border-box;
		width: 88px;
		padding: 0 8px;
		height: 582px;
	}

	@media only screen and (688px<=width) {
		width: 88px;
		padding: 0;
		height: 582px;
		align-self: flex-end;
	}


	// @media screen and (688px<=width) {
	// 	padding: 0;
	// }

	&_twitter-logo-box {
		display: none;
		height: 100%;
		width: 100%;
		align-items: center;
		margin: 0;
		padding: 0;
		//box-sizing: border-box;
		//border: solid green;

		@media only screen and (500px<=width) {
			width: 100%;
			height: 56px;
			display: flex;
			// border: solid purple;
			justify-content: center;
			align-items: center;
			margin: 0 0 0 0;
			padding: 2px 0;
			box-sizing: border-box;
		}
	}

	&_twitter-logo {
		display: flex;
		//height: 24.4px;
		padding: 0;
		margin: 0;
		//flex: 1 1 auto;
		fill: rgb(29, 155, 240);

		@media only screen and (500px<=width) {
			display: flex;
			width: 50px;
			height: 30px;
			//line-height: 20px;
			border-radius: 0;
			padding: 0;
			margin: 0;
			//flex: 1 1 auto;
			fill: rgb(29, 155, 240);
			//border:1px solid green;
		}
	}
	&_ul {
		display: flex;
		justify-content: space-evenly;
		list-style: none;
		margin: 0;
		padding: 0;
		height: 100%;

		@media only screen and (500px<=width) {
			width: 60px;
			height: 524.25px;
			flex-direction: column;
			align-items: center;
			//border: solid yellow;
			margin: 2px 0 0 0;
			padding: 0;
		}

		@media only screen and (600px<=width) {
			//margin:auto 0 auto auto;
			width: 100%;
		}
	}

	&_li {
		display: flex;
		justify-content: center;
		align-items: center;
		margin: 0;
		padding: 0;
		width: 100%;
		height: 100%;

		@media only screen and (500px<=width) {
			height: 50.25px;
			padding: 4px;
			margin-top: 0;
		}

		@media only screen and (688px<=width) {
			margin:0 0;
		}
	}

	&_li--first-item {
		@extend .nav_li;
		// margin-top: -2px;

		@media only screen and (500px<=width) {
			margin-top: 0;
		}
	}

	&_a {
		display: flex;
		justify-content: center;
		align-items: center;
		text-decoration: none;
	}
}
svg {
	border-radius: 50%;
	padding: 8px;
	overflow: visible;
}
svg:active {
	background-color: lightgray;
}

/* li:hover {
					background-color: rgba(220, 220, 220, 0.6);
					border-radius: 2rem;
					width: max-content;
					padding: 1rem 1.5rem 1rem 1.5rem;
				}
 */

button:hover {
	background-color: #1d8ad3;
}
/* ... */

